# OSCAL-Common-CP

./: .gitmodules  LICENSE  README.md  pyproject.toml
oscal-common-cp/: pyproject.toml
oscal-common-cp/oscal-json/: X.509 Certificate Policy for the U.S. Federal PKI Common Policy Framework-1.17-oscal-1.1.2-simple.json  X.509 Certificate Policy for the U.S. Federal PKI Common Policy Framework-1.18-oscal-1.1.2-simple.json  X.509 Certificate Policy for the U.S. Federal PKI Common Policy Framework-1.19-oscal-1.1.2-simple.json  X.509 Certificate Policy for the U.S. Federal PKI Common Policy Framework-1.20-oscal-1.1.2-simple.json  X.509 Certificate Policy for the U.S. Federal PKI Common Policy Framework-1.21-oscal-1.1.2-simple.json  X.509 Certificate Policy for the U.S. Federal PKI Common Policy Framework-1.22-oscal-1.1.2-simple.json  X.509 Certificate Policy for the U.S. Federal PKI Common Policy Framework-1.23-oscal-1.1.2-simple.json  X.509 Certificate Policy for the U.S. Federal PKI Common Policy Framework-1.24-oscal-1.1.2-simple.json  X.509 Certificate Policy for the U.S. Federal PKI Common Policy Framework-1.25-oscal-1.1.2-simple.json  X.509 Certificate Policy for the U.S. Federal PKI Common Policy Framework-1.26-oscal-1.1.2-simple.json  X.509 Certificate Policy for the U.S. Federal PKI Common Policy Framework-1.27-oscal-1.1.2-simple.json  X.509 Certificate Policy for the U.S. Federal PKI Common Policy Framework-1.28-oscal-1.1.2-simple.json  X.509 Certificate Policy for the U.S. Federal PKI Common Policy Framework-1.29-oscal-1.1.2-simple.json  (+10 more)
(+2 files in other folders)
