[tool.poetry]
name = "oscal-common-cp"
version = "0.1.0"
description = ""
authors = ["Robert Sherwood <robert.sherwood@credentive.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
